# lambda-airtable

./: Cargo.toml  README.md  index.html
backend/: Cargo.toml
backend/src/: lib.rs
frontend/: Cargo.toml
frontend/src/: index.html  lib.rs
src/: index.html  lib.rs
