[package]
name = "webhook-airtable-backend"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
airtable-flows = "0.1.9"
dotenv = "0.15.0"
flowsnet-platform-sdk = "0.1.5"
webhook-flows = "0.4.0"
log = "0.4.19"
serde_json = "1.0.96"
tokio_wasi = { version = "1.25.2", features = ["macros", "rt"] }
